Revert "Solved #issue 3 Fix Text Wrapping in Home Page Card Section [GSSOC'23]"

--- a/css/style.css
+++ b/css/style.css
@@ -951,7 +951,6 @@ ul.top-links li {
     color: #fff;
     text-transform: capitalize;
     padding: 10px 20px;
-		white-space: nowrap;
 }
 @media(max-width:480px) {
 .agile-dish-caption {
